--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -50,7 +50,7 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Import-Package>*</Import-Package>
                         <Export-Package />
-                        <EOSGi-TestNum>1</EOSGi-TestNum>
+                        <EOSGi-TestNum>24</EOSGi-TestNum>
                     </instructions>
                 </configuration>
             </plugin>
@@ -67,10 +67,10 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin> 
+            <plugin>
                 <groupId>org.everit.osgi.dev</groupId>
                 <artifactId>eosgi-maven-plugin</artifactId>
-                <version>1.1.1</version>
+                <version>1.1.3</version>
                 <executions>
                     <execution>
                         <id>integration-test</id>
@@ -90,7 +90,7 @@
                                     <systemProperties>
 <!--                                         <jetty.port>8080</jetty.port> -->
 <!--                                         <jetty.home.bundle>${project.artifactId}</jetty.home.bundle> -->
-                                        <osgi.console>6667</osgi.console>
+<!--                                         <osgi.console>6667</osgi.console> -->
                                         <osgi.java.profile.bootdelegation>override</osgi.java.profile.bootdelegation>
                                         <org.osgi.framework.system.packages>javax.accessibility\,javax.activation\,javax.activity\,javax.annotation.processing\,javax.crypto\,javax.crypto.interfaces\,javax.crypto.spec\,javax.imageio\,javax.imageio.event\,javax.imageio.metadata\,javax.imageio.plugins.bmp\,javax.imageio.plugins.jpeg\,javax.imageio.spi\,javax.imageio.stream\,javax.jws\,javax.jws.soap\,javax.lang.model\,javax.lang.model.element\,javax.lang.model.type\,javax.lang.model.util\,javax.management\,javax.management.loading\,javax.management.modelmbean\,javax.management.monitor\,javax.management.openmbean\,javax.management.relation\,javax.management.remote\,javax.management.remote.rmi\,javax.management.timer\,javax.naming\,javax.naming.directory\,javax.naming.event\,javax.naming.ldap\,javax.naming.spi\,javax.net\,javax.net.ssl\,javax.print\,javax.print.attribute\,javax.print.attribute.standard\,javax.print.event\,javax.rmi\,javax.rmi.CORBA\,javax.rmi.ssl\,javax.script\,javax.security.auth\,javax.security.auth.callback\,javax.security.auth.kerberos\,javax.security.auth.login\,javax.security.auth.spi\,javax.security.auth.x500\,javax.security.cert\,javax.security.sasl\,javax.sound.midi\,javax.sound.midi.spi\,javax.sound.sampled\,javax.sound.sampled.spi\,javax.swing\,javax.swing.border\,javax.swing.colorchooser\,javax.swing.event\,javax.swing.filechooser\,javax.swing.plaf\,javax.swing.plaf.basic\,javax.swing.plaf.metal\,javax.swing.plaf.multi\,javax.swing.plaf.synth\,javax.swing.table\,javax.swing.text\,javax.swing.text.html\,javax.swing.text.html.parser\,javax.swing.text.rtf\,javax.swing.tree\,javax.swing.undo\,javax.tools\,javax.xml\,javax.xml.bind\,javax.xml.bind.annotation\,javax.xml.bind.annotation.adapters\,javax.xml.bind.attachment\,javax.xml.bind.helpers\,javax.xml.bind.util\,javax.xml.crypto\,javax.xml.crypto.dom\,javax.xml.crypto.dsig\,javax.xml.crypto.dsig.dom\,javax.xml.crypto.dsig.keyinfo\,javax.xml.crypto.dsig.spec\,javax.xml.datatype\,javax.xml.namespace\,javax.xml.parsers\,javax.xml.soap\,javax.xml.stream\,javax.xml.stream.events\,javax.xml.stream.util\,javax.xml.transform\,javax.xml.transform.dom\,javax.xml.transform.sax\,javax.xml.transform.stax\,javax.xml.transform.stream\,javax.xml.validation\,javax.xml.ws\,javax.xml.ws.handler\,javax.xml.ws.handler.soap\,javax.xml.ws.http\,javax.xml.ws.soap\,javax.xml.ws.spi\,javax.xml.ws.wsaddressing\,javax.xml.xpath\,org.ietf.jgss\,org.omg.CORBA\,org.omg.CORBA_2_3\,org.omg.CORBA_2_3.portable\,org.omg.CORBA.DynAnyPackage\,org.omg.CORBA.ORBPackage\,org.omg.CORBA.portable\,org.omg.CORBA.TypeCodePackage\,org.omg.CosNaming\,org.omg.CosNaming.NamingContextExtPackage\,org.omg.CosNaming.NamingContextPackage\,org.omg.Dynamic\,org.omg.DynamicAny\,org.omg.DynamicAny.DynAnyFactoryPackage\,org.omg.DynamicAny.DynAnyPackage\,org.omg.IOP\,org.omg.IOP.CodecFactoryPackage\,org.omg.IOP.CodecPackage\,org.omg.Messaging\,org.omg.PortableInterceptor\,org.omg.PortableInterceptor.ORBInitInfoPackage\,org.omg.PortableServer\,org.omg.PortableServer.CurrentPackage\,org.omg.PortableServer.POAManagerPackage\,org.omg.PortableServer.POAPackage\,org.omg.PortableServer.portable\,org.omg.PortableServer.ServantLocatorPackage\,org.omg.SendingContext\,org.omg.stub.java.rmi\,org.w3c.dom\,org.w3c.dom.bootstrap\,org.w3c.dom.css\,org.w3c.dom.events\,org.w3c.dom.html\,org.w3c.dom.ls\,org.w3c.dom.ranges\,org.w3c.dom.stylesheets\,org.w3c.dom.traversal\,org.w3c.dom.views\,org.w3c.dom.xpath\,org.xml.sax\,org.xml.sax.ext\,org.xml.sax.helpers</org.osgi.framework.system.packages>
                                     </systemProperties>
@@ -99,8 +99,8 @@
                                         <vmOption>-XX:MaxPermSize=128m</vmOption>
                                         <vmOption>-Xmx360m</vmOption>
                                         <vmOption>-Xms128m</vmOption>
-                                        <vmOption>-Xdebug</vmOption>
-                                        <vmOption>-Xrunjdwp:transport=dt_socket\,server=y\,suspend=n\,address=1044</vmOption>
+<!--                                         <vmOption>-Xdebug</vmOption> -->
+<!--                                         <vmOption>-Xrunjdwp:transport=dt_socket\,server=y\,suspend=n\,address=1044</vmOption> -->
                                     </vmOptions>
                                 </environment>
                             </environments>
@@ -112,11 +112,30 @@
     </build>
 
     <dependencies>
-
+        <!-- Dependecy for the transaction helper component -->
         <dependency>
             <groupId>org.everit.osgi.transaction.helper</groupId>
             <artifactId>org.everit.osgi.transaction.helper.component</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <!-- dependency for the Declarative Services (DS). Plugin processor and annotations -->
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr.annotations</artifactId>
+            <version>1.9.6</version>
+        </dependency>
+        
+        <!-- dependency for the transactionManager -->
+        <dependency>
+            <groupId>org.apache.aries.transaction</groupId>
+            <artifactId>org.apache.aries.transaction.manager</artifactId>
+            <version>1.0.1</version>
         </dependency>
 
         <dependency>
@@ -124,29 +143,27 @@
             <artifactId>org.osgi.core</artifactId>
             <version>4.3.1</version>
         </dependency>
-
         <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.scr</artifactId>
-            <version>1.8.0</version>
+            <groupId>org.everit.osgi.dev.testrunner</groupId>
+            <artifactId>org.everit.osgi.dev.testrunner.junit4</artifactId>
+            <version>1.0.0</version>
         </dependency>
-
         <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.scr.annotations</artifactId>
-            <version>1.9.6</version>
+            <groupId>org.everit.osgi.dev.testrunner</groupId>
+            <artifactId>org.everit.osgi.dev.testrunner.blueprint</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.everit.osgi.bundles</groupId>
+            <artifactId>org.everit.osgi.bundles.org.osgi.service.blueprint</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.everit.osgi.dev</groupId>
             <artifactId>org.everit.osgi.dev.richconsole</artifactId>
             <version>1.0.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.junit</groupId>
-            <artifactId>com.springsource.org.junit</artifactId>
-            <version>4.9.0</version>
-        </dependency>
-
+        
         <dependency>
             <groupId>org.apache.aries</groupId>
             <artifactId>org.apache.aries.util</artifactId>
@@ -158,81 +175,5 @@
             <version>1.4.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.aries.transaction</groupId>
-            <artifactId>org.apache.aries.transaction.manager</artifactId>
-            <version>1.0.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.everit.osgi.bundles</groupId>
-            <artifactId>org.everit.osgi.bundles.javax.persistence</artifactId>
-            <version>2.0.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.transaction</groupId>
-                    <artifactId>com.springsource.javax.transaction</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.everit.osgi</groupId>
-            <artifactId>org.everit.osgi.jpa.containercontexthandler</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.everit.osgi.bundles</groupId>
-            <artifactId>org.everit.osgi.bundles.org.apache.commons.dbcp</artifactId>
-            <version>1.4</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.transaction</groupId>
-                    <artifactId>com.springsource.javax.transaction</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.aries.jpa</groupId>
-            <artifactId>org.apache.aries.jpa.container.context</artifactId>
-            <version>1.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.everit.osgi.jpa</groupId>
-            <artifactId>org.everit.osgi.jpa.container</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.aries.quiesce</groupId>
-            <artifactId>org.apache.aries.quiesce.manager</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.everit.osgi.jdbc</groupId>
-            <artifactId>org.everit.osgi.jdbc.h2</artifactId>
-            <version>1.0.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.transaction</groupId>
-                    <artifactId>com.springsource.javax.transaction</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.everit.osgi.hibernate</groupId>
-            <artifactId>org.everit.osgi.hibernate.adapter</artifactId>
-            <version>1.0.0</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>asm-all</artifactId>
-                    <groupId>org.ow2.asm</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
     </dependencies>
 </project>
