Pom.xml-es refactoring. Removing unneccesary files (dummy.txt). Remove unSetTransactionManager method.

--- a/pom.xml
+++ b/pom.xml
@@ -22,76 +22,57 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.everit</groupId>
-		<artifactId>oss</artifactId>
-		<version>4</version>
-	</parent>
+    <parent>
+        <groupId>org.everit</groupId>
+        <artifactId>oss</artifactId>
+        <version>4</version>
+    </parent>
 
-	 <groupId>org.everit.osgi</groupId>
-	<artifactId>org.everit.osgi.transaction.helper</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+    <groupId>org.everit.osgi</groupId>
+    <artifactId>org.everit.osgi.transaction.helper</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
 
-	<name>Everit org.everit.osgi.transaction.helper</name>
-	<description>Helper classes to be able to reference an OSGi service with a proxy object and hold method calls until a timeout if no service is available behind a proxy. You can see this kind of behaviour in the Blueprint spec.</description>
+    <packaging>pom</packaging>
 
-	<properties>
-		<projectpath>org.everit.osgi.transaction.helper</projectpath>
-	</properties>
+    <name>Everit org.everit.osgi.transaction.helper</name>
+    <description>Helper classes to be able to reference an OSGi service with a proxy object and hold method calls until a timeout if no service is available behind a proxy. You can see this kind of behaviour in the Blueprint spec.</description>
 
-	<scm>
-		<connection>scm:git:git://github.com/everit-org/${projectpath}.git</connection>
-		<developerConnection>scm:git:https://github.com/everit-org/${projectpath}.git</developerConnection>
-		<url>https://github.com/everit-org/${projectpath}</url>
-	</scm>
-	<url>${everit.public.site.url}/mvnsites/${projectpath}</url>
-	<distributionManagement>
-		<site>
-			<id>everit.org</id>
-			<url>dav:${everit.public.site.url}/mvnsites/${projectpath}</url>
-		</site>
-	</distributionManagement>
-	<ciManagement>
-		<system>Jenkins</system>
-		<url>https://ci.everit.biz/jenkins/job/${projectpath}</url>
-	</ciManagement>
-	<issueManagement>
-		<system>GitHub</system>
-		<url>https://github.com/everit-org/${projectpath}/issues</url>
-	</issueManagement>
+    <properties>
+        <maven.site.skip>true</maven.site.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+    
+    <modules>
+        <module>component</module>
+        <module>tests</module>
+    </modules>
 
-	<modules>
-		<module>component</module>
-		<module>tests</module>
-	</modules>
-
-	<repositories>
-		<repository>
-			<id>everit.groups.public</id>
-			<name>Everit Public Repository Group</name>
-			<url>http://repository.everit.biz/nexus/content/groups/public</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>everit.groups.proxy</id>
-			<name>Everit Proxy Repository Group</name>
-			<url>http://repository.everit.biz/nexus/content/groups/proxy</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
+    <repositories>
+        <repository>
+            <id>everit.groups.public</id>
+            <name>Everit Public Repository Group</name>
+            <url>http://repository.everit.biz/nexus/content/groups/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>everit.groups.proxy</id>
+            <name>Everit Proxy Repository Group</name>
+            <url>http://repository.everit.biz/nexus/content/groups/proxy</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
