--- a/component/pom.xml
+++ b/component/pom.xml
@@ -27,17 +27,43 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.everit.osgi</groupId>
-        <artifactId>org.everit.osgi.transaction.helper</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <groupId>org.everit</groupId>
+        <artifactId>oss</artifactId>
+        <version>4</version>
     </parent>
 
     <groupId>org.everit.osgi.transaction.helper</groupId>
     <artifactId>org.everit.osgi.transaction.helper.component</artifactId>
+    <version>0.1.0-SNAPSHOT</version>
 
     <packaging>bundle</packaging>
     <name>Everit org.everit.osgi.transaction.helper Component</name>
     <description>Everit org.everit.osgi.transaction.helper</description>
+
+    <properties>
+        <projectpath>transaction-helper</projectpath>
+    </properties>
+
+    <scm>
+        <connection>scm:git:git://github.com/everit-org/${projectpath}.git</connection>
+        <developerConnection>scm:git:https://github.com/everit-org/${projectpath}.git</developerConnection>
+        <url>https://github.com/everit-org/${projectpath}</url>
+    </scm>
+    <url>${everit.public.site.url}/mvnsites/${projectpath}</url>
+    <distributionManagement>
+        <site>
+            <id>everit.org</id>
+            <url>dav:${everit.public.site.url}/mvnsites/${projectpath}</url>
+        </site>
+    </distributionManagement>
+    <ciManagement>
+        <system>Jenkins</system>
+        <url>https://ci.everit.biz/jenkins/job/${projectpath}</url>
+    </ciManagement>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/everit-org/${projectpath}/issues</url>
+    </issueManagement>
 
     <build>
         <plugins>
@@ -52,7 +78,7 @@
                             *
                         </Import-Package>
                         <Export-Package>
-                        ${project.artifactId}.api
+                            ${project.artifactId}.api
                         </Export-Package>
                     </instructions>
                 </configuration>
@@ -96,4 +122,29 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>everit.groups.public</id>
+            <name>Everit Public Repository Group</name>
+            <url>http://repository.everit.biz/nexus/content/groups/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>everit.groups.proxy</id>
+            <name>Everit Proxy Repository Group</name>
+            <url>http://repository.everit.biz/nexus/content/groups/proxy</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
