--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2011, Everit Kft.
+    This file is part of Everit - Transaction Helper Parent.
 
-    All rights reserved.
+    Everit - Transaction Helper Parent is free software: you can redistribute it and/or modify
+    it under the terms of the GNU Lesser General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
 
-    This library is free software; you can redistribute it and/or
-    modify it under the terms of the GNU Lesser General Public
-    License as published by the Free Software Foundation; either
-    version 3 of the License, or (at your option) any later version.
-
-    This library is distributed in the hope that it will be useful,
+    Everit - Transaction Helper Parent is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-    Lesser General Public License for more details.
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Lesser General Public License for more details.
 
-    You should have received a copy of the GNU Lesser General Public
-    License along with this library; if not, write to the Free Software
-    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
-    MA 02110-1301  USA
+    You should have received a copy of the GNU Lesser General Public License
+    along with Everit - Transaction Helper Parent.  If not, see <http://www.gnu.org/licenses/>.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -27,22 +23,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.everit</groupId>
-        <artifactId>oss</artifactId>
-        <version>4</version>
+        <groupId>org.everit.config</groupId>
+        <artifactId>org.everit.config.oss</artifactId>
+        <version>5.0.0</version>
     </parent>
 
     <groupId>org.everit.osgi</groupId>
-    <artifactId>org.everit.osgi.transaction.helper</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <artifactId>org.everit.osgi.transaction.helper.parent</artifactId>
+    <version>1.0.0</version>
 
     <packaging>pom</packaging>
 
-    <name>Everit org.everit.osgi.transaction.helper</name>
-    <description>Helper classes to be able to reference an OSGi service with a proxy object and hold method calls until a timeout if no service is available behind a proxy. You can see this kind of behaviour in the Blueprint spec.</description>
+    <name>Everit - Transaction Helper Parent</name>
+    <description>OSGi Transaction Helper Component</description>
 
     <properties>
         <maven.site.skip>true</maven.site.skip>
+        <maven.site.deploy.skip>true</maven.site.deploy.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
     
@@ -50,29 +47,4 @@
         <module>component</module>
         <module>tests</module>
     </modules>
-
-    <repositories>
-        <repository>
-            <id>everit.groups.public</id>
-            <name>Everit Public Repository Group</name>
-            <url>http://repository.everit.biz/nexus/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>everit.groups.proxy</id>
-            <name>Everit Proxy Repository Group</name>
-            <url>http://repository.everit.biz/nexus/content/groups/proxy</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 </project>
