Making it possible to use the 1.1.0 library outside of OSGi

--- a/component/pom.xml
+++ b/component/pom.xml
@@ -92,7 +92,7 @@
               *
             </Import-Package>
             <Export-Package>
-              ${project.artifactId}.api
+              ${project.artifactId}.api;version="1.0.0"
             </Export-Package>
           </instructions>
         </configuration>
