--- a/component/pom.xml
+++ b/component/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.everit.osgi</groupId>
   <artifactId>org.everit.osgi.transaction.helper</artifactId>
-  <version>1.1.0</version>
+  <version>2.0.0</version>
 
   <packaging>bundle</packaging>
   <name>Everit - Transaction Helper</name>
@@ -38,8 +38,8 @@
 
   <properties>
     <projectpath>transaction-helper</projectpath>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <scm>
@@ -92,7 +92,7 @@
               *
             </Import-Package>
             <Export-Package>
-              ${project.artifactId}.api;version="1.0.0"
+              ${project.artifactId}.api;version="${project.version}"
             </Export-Package>
           </instructions>
         </configuration>
@@ -100,7 +100,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-scr-plugin</artifactId>
-        <version>1.15.0</version>
+        <version>1.17.0</version>
         <executions>
           <execution>
             <id>generate-scr-scrdescriptor</id>
