--- a/component/pom.xml
+++ b/component/pom.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    This file is part of Everit - Transaction Helper.
+    Copyright (C) 2011 Everit Kft. (http://www.everit.biz)
 
-    Everit - Transaction Helper is free software: you can redistribute it and/or modify
-    it under the terms of the GNU Lesser General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-    Everit - Transaction Helper is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU Lesser General Public License for more details.
+            http://www.apache.org/licenses/LICENSE-2.0
 
-    You should have received a copy of the GNU Lesser General Public License
-    along with Everit - Transaction Helper.  If not, see <http://www.gnu.org/licenses/>.
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -25,7 +24,7 @@
   <parent>
     <groupId>org.everit.config</groupId>
     <artifactId>org.everit.config.oss</artifactId>
-    <version>5.0.0</version>
+    <version>7.0.1</version>
   </parent>
 
   <groupId>org.everit.osgi</groupId>
@@ -48,12 +47,8 @@
     <url>https://github.com/everit-org/${projectpath}</url>
   </scm>
 
-  <url>http://everit.org</url>
+  <url>https://github.com/everit-org/${projectpath}</url>
 
-  <ciManagement>
-    <system>Jenkins</system>
-    <url>https://ci.everit.biz/jenkins/job/${projectpath}</url>
-  </ciManagement>
   <issueManagement>
     <system>GitHub</system>
     <url>https://github.com/everit-org/${projectpath}/issues</url>
@@ -61,8 +56,8 @@
 
   <licenses>
     <license>
-      <name>GNU Lesser General Public License v3.0</name>
-      <url>http://opensource.org/licenses/LGPL-3.0</url>
+      <name>Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -75,7 +70,7 @@
 
   <organization>
     <name>Everit Kft.</name>
-    <url>http://www.everit.biz</url>
+    <url>http://www.everit.org</url>
   </organization>
 
   <build>
@@ -83,7 +78,6 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.4.0</version>
         <extensions>true</extensions>
         <configuration>
           <instructions>
@@ -92,7 +86,7 @@
               *
             </Import-Package>
             <Export-Package>
-              ${project.artifactId}.api;version="${project.version}"
+              ${project.artifactId}.api
             </Export-Package>
           </instructions>
         </configuration>
