--- a/component/pom.xml
+++ b/component/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.everit.osgi</groupId>
   <artifactId>org.everit.osgi.transaction.helper</artifactId>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.0.1</version>
 
   <packaging>bundle</packaging>
   <name>Everit - Transaction Helper</name>
