--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -28,7 +28,7 @@
   </parent>
 
   <artifactId>org.everit.osgi.transaction.helper.tests</artifactId>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>2.0.1</version>
 
   <packaging>bundle</packaging>
   <name>Everit - Transaction Helper Tests</name>
